tests/basic/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: backend
  labels:
    app: checkout
    app.kubernetes.io/part-of: backend
  annotations:
      app.openshift.io/connects-to: "recommendation,notification"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - image: quay.io/vuln/rce-webapp:latest
          command: ["/bin/entrypoint"]
          args:
            [
              "-listen",
              ":8080",
              "-connect",
              "$(RECOMMENDATION_ADDR):$(RECOMMENDATION_PORT),$(NOTIFICATION_ADDR):$(NOTIFICATION_PORT),$(GATEWAY_ADDR):$(GATEWAY_PORT)",
            ]
          imagePullPolicy: Always
          name: checkout
          envFrom:
            - configMapRef:
                name: checkout-endpoint-config
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp 
  namespace: frontend 
  labels:
    app: webapp
spec:
  to:
    kind: Service
    name: webapp-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
